--- a/src/municipio.njk
+++ b/src/municipio.njk
@@ -333,7 +333,7 @@ tags:
                                             <img src="/assets/images/municipio/01_ELEMENTOS LAB/01_ICONOS/LAB MUNICIPAL_01-32.png">
                                             <div class="text">
                                                 <h3 >Acceso a la información pública</h3>
-                                                <h1 class="mb-4">{{municipio.transparencia.aipPromedio | limitNumberLength(5)}} %</h1>
+                                                <h1 class="mb-4">{{municipio.transparencia.aip2023 | limitNumberLength(5)}} %</h1>
                                                 <p>Fuente: Procuraduría de los Derechos Humanos (PDH) 2023</p>
                                             </div>
                                         </div>
