--- a/src/base.njk
+++ b/src/base.njk
@@ -133,32 +133,8 @@
                         <div class="col-lg-3 my-2 flex-container">
                             <div class="links-footer text-left">
                                 <a href="/index.html">Inicio</a>
-                                <a href="/nosotros/index.html">Nosotros</a>
-                                
-                                <div>
-                                    Proyectos
-                                    <ul>
-                                        <li><a href="/programas/index.html">Programas</a></li>
-                                        <li><a href="/proyectos/index.html">Proyectos</a></li>
-                                    </ul>
-                                </div>
-                                
-                                <div>
-                                    Publicaciones
-                                    <ul>
-                                        <li><a href="/publicaciones/index.html">Publicaciones</a></li>
-                                        <li><a href="/mediciones/index.html">Mediciones</a></li>
-                                    </ul>
-                                </div>
-                                
-                                <div>
-                                    Novedades
-                                    <ul>
-                                        <li><a href="/blogs/index.html">Novedades</a></li>
-                                        <li><a href="/oportunidades/index.html">Oportunidades</a></li>
-                                    </ul>
-                                </div>
-                                
+                                <a href="/municipios/index.html">Municipios</a>
+                                <a href="/mapa/index.html">Mapa Municipal</a>
                                 <a href="/contacto/index.html">Contacto</a>
                             </div>                          
                         </div>
