--- a/src/base.njk
+++ b/src/base.njk
@@ -52,9 +52,9 @@
 
 						<!-- Logo
 						============================================= -->
-						<div id="logo" style="border:none!important">
-							<a href="/index.html" class="standard-logo"><img style="padding:5% 0" src="/assets/images/logo/LOGO-RED_NEGRO.png" alt="Canvas Logo"></a>
-							<a href="/index.html" class="retina-logo"><img style="padding:5% 0" src="/assets/images/logo/LOGO-RED_NEGRO.png" alt="Canvas Logo"></a>
+						<div class="logos" >
+							<a href="https://redciudadana.org/"><img class="logo1"src="/assets/img/logos/LOGO-RED_NEGRO.png" alt="Canvas Logo"></a>
+							<a href="/index.html"><img class="logo2" src="/assets/img/logos/GOBIERNO DIGITAL-12.png" alt="Canvas Logo"></a>
 						</div><!-- #logo end -->
 
 						<!-- Botón de hamburguesa -->
