--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19982,3 +19982,19 @@ label.checkbox {
   opacity: 0.5;
   cursor: default;
 }
+
+.logos{
+  display: flex;
+  align-items: center;
+}
+
+.logos .logo1{
+  width: 160px;
+  height: 31px;
+  margin-right: 10px;
+}
+
+.logos .logo2{
+  width: 160px;
+  height: 51px;
+}
