--- a/src/municipio.njk
+++ b/src/municipio.njk
@@ -142,6 +142,7 @@ tags:
                 <div class="sidebar box_shadow_section">
                     <select id="responsive-tabs" class="tab-dropdown d-lg-none">
                       <option value="#general">General</option>
+                      <option value="#adjudicacion">Corporación Municipal</option>
                       <option value="#gestion-municipal">Gestión Municipal</option>
                       <option value="#transparencia">Transparencia</option>
                       <option value="#nutricion">Nutrición</option>
@@ -157,6 +158,7 @@ tags:
                     
                     <ul class="semicircle-menu d-none d-lg-block" style="padding: 10px 0;">
                       <li><a href="#" class="tab-link active" data-target="#general"><img src="/assets/images/municipio/01_ELEMENTOS LAB/01_ICONOS/LAB MUNICIPAL_01-30.png">General</a></li>
+                      <li><a href="#" class="tab-link" data-target="#adjudicacion"><img src="#">Corporación Municipal</a></li>
                       <li><a href="#" class="tab-link" data-target="#gestion-municipal"><img src="/assets/images/municipio/01_ELEMENTOS LAB/01_ICONOS/Gestion municipal.png">Gestión Municipal</a></li>
                       <li><a href="#" class="tab-link" data-target="#transparencia"><img src="/assets/images/municipio/01_ELEMENTOS LAB/01_ICONOS/LAB MUNICIPAL_01-32.png">Transparencia</a></li>
                       <li><a href="#" class="tab-link" data-target="#nutricion"><img src="/assets/images/municipio/01_ELEMENTOS LAB/01_ICONOS/LAB MUNICIPAL_01-33.png">Nutrición</a></li>
@@ -258,6 +260,60 @@ tags:
                             </div>
                         </div>
                     </section>
+
+                    <section id="adjudicacion" class="tab-content">
+                        <div class="container box_shadow_section ud-section">
+                            <div class="row align-items-center mb-2 px-2">
+                                 <div class="col-lg-12 px-4">
+
+                                    <h3 >Corporación Municipal</h3>
+                                    <p>Fuente: Tribunal Supremo Electoral (TSE) 2023</p>
+                                    <br>
+
+                                    <div class="table-responsive d-none d-lg-block">
+                                        <table class="table table-bordered table-hover">
+                                            <thead class="thead-dark">
+                                                <tr>
+                                                    <th>Siglas</th>
+                                                    <th>Corporación Municipal</th>
+                                                    <th>Nombre</th>
+                                                    <th>Puesto</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                {% for adjudicacion in municipio.adjudicaciones.adjudicaciones %}
+                                                <tr>
+                                                    <td>{{ adjudicacion.siglas | capitalize }}</td>
+                                                    <td>{{ adjudicacion.corporacion_municipal | capitalize }}</td>
+                                                    <td>{{ adjudicacion.nombre | capitalize }}</td>
+                                                    {% if adjudicacion.puesto == "ALCALDE MUNICIPAL" %}
+                                                    <td>{{ adjudicacion.puesto | capitalize }}</td>
+                                                    {% else %}
+                                                    <td>{{ adjudicacion.puesto | capitalizeExceptLast }}</td>
+                                                    {% endif %}
+                                                </tr>
+                                                {% endfor %}
+                                            </tbody>
+                                        </table>
+                                    </div>
+                    
+                                    <!-- Diseño tipo tarjeta para dispositivos móviles -->
+                                    <div class="d-lg-none">
+                                        {% for adjudicacion in municipio.adjudicaciones.adjudicaciones %}
+                                        <div class="card mb-3">
+                                            <div class="card-body">
+                                                <p><strong>Siglas:</strong> {{ adjudicacion.siglas | capitalize }}</p>
+                                                <p><strong>Corporación Municipal:</strong> {{ adjudicacion.corporacion_municipal | capitalize }}</p>
+                                                <p><strong>Nombre:</strong> {{ adjudicacion.nombre | capitalize }}</p>
+                                                <p><strong>Puesto:</strong> {{ adjudicacion.puesto | capitalize }}</p>
+                                            </div>
+                                        </div>
+                                        {% endfor %}
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>                                      
 
                     <section id="gestion-municipal" class="tab-content">
                         <div class="row  mb-4">
