--- a/src/base.njk
+++ b/src/base.njk
@@ -50,11 +50,13 @@
 				<div class="container" >				
 					<div class="header-row justify-content-lg-between container" style="padding: 0;">
 
-						<!-- Logo
-						============================================= -->
-						<div class="logos" >
-							<a href="https://redciudadana.org/"><img class="logo1"src="/assets/img/logos/LOGO-RED_NEGRO.png" alt="Canvas Logo"></a>
-						</div><!-- #logo end -->
+						<div>
+							<!-- Logo
+							============================================= -->
+							<div class="logos" >
+								<a href="https://redciudadana.org/"><img class="logo1"src="/assets/img/logos/LOGO-RED_NEGRO.png" alt="Canvas Logo"></a>
+							</div><!-- #logo end -->
+						</div>
 
 						<!-- Botón de hamburguesa -->
 						<div class="menu-toggle">
@@ -63,39 +65,40 @@
 							<div class="bar"></div>
 						</div>
 
-						<!-- Primary Navigation
-						============================================= -->
-						<nav class="primary-menu" >
-
-
-							<ul class="menu-container" style="border:none!important">
-								<li class="menu-item "><a class="menu-link" href="/index.html"><div>Inicio</div></a></li>
-								<li class="menu-item "><a class="menu-link" href="/municipios/index.html"><div>Municipios</div></a></li>
-								<li class="menu-item "><a class="menu-link" href="/mapa/index.html"><div>Mapa Municipal</div></a></li>
-								<li class="menu-item "><a class="menu-link btn" style="padding: 5px 10px!important;" href="/contacto/index.html"><div>Contacto</div></a></li>
-
-								<div class="redes-responsive">
-									<a target="_blank" href="https://www.facebook.com/Redciudadanagt"><i class="fab fa-facebook-f"></i></a>
-									<a target="_blank" href="https://www.tiktok.com/@redxguate"><i class="fa-brands fa-tiktok"></i></a>
-									<a target="_blank" href="https://twitter.com/redxguate"><i class="fa-brands fa-x-twitter"></i></a>
-									<a target="_blank" href="https://www.instagram.com/redxguate/"><i class="fab fa-instagram "></i></a>
-									<a target="_blank" href="https://www.youtube.com/c/RedciudadanaOrgGt"><i class="fab fa-youtube"></i></a>
-								</div>
-							</ul>
-
-						</nav><!-- #primary-menu end -->
-
-						
-
-						<div class="redes">
-							<a target="_blank" href="https://www.facebook.com/Redciudadanagt"><i class="fab fa-facebook-f"></i></a>
-							<a target="_blank" href="https://www.tiktok.com/@redxguate"><i class="fa-brands fa-tiktok"></i></a>
-							<a target="_blank" href="https://twitter.com/redxguate"><i class="fa-brands fa-x-twitter"></i></a>
-							<a target="_blank" href="https://www.instagram.com/redxguate/"><i class="fab fa-instagram "></i></a>
-							<a target="_blank" href="https://www.youtube.com/c/RedciudadanaOrgGt"><i class="fab fa-youtube"></i></a>
+						<div class="d-flex align-items-center">
+							
+							<!-- Primary Navigation
+							============================================= -->
+							<nav class="primary-menu" >
+	
+	
+								<ul class="menu-container" style="border:none!important">
+									<li class="menu-item "><a class="menu-link" href="/index.html"><div>Inicio</div></a></li>
+									<li class="menu-item "><a class="menu-link" href="/municipios/index.html"><div>Municipios</div></a></li>
+									<li class="menu-item "><a class="menu-link" href="/mapa/index.html"><div>Mapa Municipal</div></a></li>
+									<li class="menu-item "><a class="menu-link btn" style="padding: 5px 10px!important;" href="/contacto/index.html"><div>Contacto</div></a></li>
+	
+									<div class="redes-responsive">
+										<a target="_blank" href="https://www.facebook.com/Redciudadanagt"><i class="fab fa-facebook-f"></i></a>
+										<a target="_blank" href="https://www.tiktok.com/@redxguate"><i class="fa-brands fa-tiktok"></i></a>
+										<a target="_blank" href="https://twitter.com/redxguate"><i class="fa-brands fa-x-twitter"></i></a>
+										<a target="_blank" href="https://www.instagram.com/redxguate/"><i class="fab fa-instagram "></i></a>
+										<a target="_blank" href="https://www.youtube.com/c/RedciudadanaOrgGt"><i class="fab fa-youtube"></i></a>
+									</div>
+								</ul>
+	
+							</nav><!-- #primary-menu end -->
+	
+							
+	
+							<div class="redes">
+								<a target="_blank" href="https://www.facebook.com/Redciudadanagt"><i class="fab fa-facebook-f"></i></a>
+								<a target="_blank" href="https://www.tiktok.com/@redxguate"><i class="fa-brands fa-tiktok"></i></a>
+								<a target="_blank" href="https://twitter.com/redxguate"><i class="fa-brands fa-x-twitter"></i></a>
+								<a target="_blank" href="https://www.instagram.com/redxguate/"><i class="fab fa-instagram "></i></a>
+								<a target="_blank" href="https://www.youtube.com/c/RedciudadanaOrgGt"><i class="fab fa-youtube"></i></a>
+							</div>
 						</div>
-
-						
 
 					</div>
 				</div>
