--- a/src/index.njk
+++ b/src/index.njk
@@ -23,10 +23,10 @@ permalink: "index.html"
                         <p class="my-4" style="font-size: 25px!important;">Tiene como objetivo central facilitar la colaboración y la integración de datos entre entidades públicas y privadas en Guatemala. <br>
                             
                         </p>
-                        <a class="btn" href="/contacto/index.html">Únete al laboratorio</a>
+                        <a class="btn" href="#">Aplica a Lab</a>
                     </div>
                     <div class="col-lg-6 my-4">
-                        <img src="/assets/img/interoperabilidad/SLIDER 02.png">
+                        <img src="/assets/img/elementos_mejoras/LAB MUNICIPAL.png">
                     </div>
                 </div>
 			</div>
