--- a/src/index.njk
+++ b/src/index.njk
@@ -18,15 +18,15 @@ permalink: "index.html"
 		<section id="slider" class="slider-element px-2">
 			<div class="container" style="padding: 0 0;">
                 <div class="row my-6 align-items-center">
-                    <div class="col-lg-6 my-4">
+                    <div class="col-lg-5 my-4">
                         <h1 class="text-titles" style="font-size: 60px!important;line-height: 60px;">Laboratorio de Municipalidades </h1>
                         <p class="my-4" style="font-size: 25px!important;">Tiene como objetivo central facilitar la colaboración y la integración de datos entre entidades públicas y privadas en Guatemala. <br>
                             
                         </p>
                         <a class="btn" href="#">Aplica a Lab</a>
                     </div>
-                    <div class="col-lg-6 my-4">
-                        <img src="/assets/img/elementos_mejoras/LAB MUNICIPAL.png">
+                    <div class="col-lg-7 my-4">
+                        <img style="width: 120%;" src="/assets/img/elementos_mejoras/LAB MUNICIPAL.png">
                     </div>
                 </div>
 			</div>
